# WESEX

./: CMakeLists.txt  Dockerfile  README.md  build.sh  vcpkg.json
cmake/: FindDPP.cmake
src/: main.cpp  main.h
